# elitonom

./: .gitignore  Cargo.toml  bleh.rs  deploy.sh  flake.nix  meta_tiles.rs  readme.md  rust-toolchain.toml
src/: constants.rs  dead_code.rs  life.rs  main.rs  meta_tiles.rs  tree.rs  ui.rs  utils.rs
src/life/: draw.rs  init.rs  noise.rs  step.rs
src/tree/: hat.rs  hat_meta_tiles.rs  spectre.rs
