[package]
name = "elitonom"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.10.1", features = ["wayland"] }
# bevy = { version = "0.10.1", features = ["wayland"] }
bevy-inspector-egui = "0.18.3"
bevy_egui = "0.20.3"
bevy_pancam = "0.8.0"
bevy_prototype_lyon = "0.8.0"
kiddo = "2.0.2"
rand = "0.8.5"
trees = "0.4.2"

# Enable a small amount of optimization in debug mode
# [profile.dev]
# opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release]
# lto = "thin"
debug = true
